--- a/work/writing/days/20241222.md
+++ b/work/writing/days/20241222.md
@@ -10,3 +10,5 @@ let's work on telling the ten year story of the ll. but other things too? how ab
 2. stories of days
 3. stories of events
 4. academic work (as proof of concept)
+5. cinematic interludes (or opens or bumpers) for youtube-style presentational videos.
+
